--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     .swiper-slide img {
       display: block;
     }
-    @media screen and (max-width: 500px){
-        .swiper-slide img {
-      width: 100%;
+
+    @media screen and (max-width: 500px) {
+      .swiper-slide img {
+        width: 100%;
+      }
     }
-    }
-    
   </style>
 </head>
 
@@ -93,7 +93,7 @@
       <div class="swiper-slide">
         <video src="./images/vd_01.mp4" controls width="300" height="300"></video>
         <p>또잉또잉~</p>
-    </div>
+      </div>
       <div class="swiper-slide">
         <img src="./images/2018_11.jpg" />
         <p>ㅋㅋㅋㅋㅋ</p>
@@ -125,11 +125,11 @@
       <div class="swiper-slide">
         <video src="./images/vd_02.mp4" controls width="300" height="300"></video>
         <p>보름이 꼬시기 1</p>
-    </div>
-    <div class="swiper-slide">
+      </div>
+      <div class="swiper-slide">
         <video src="./images/vd_03.mp4" controls width="300" height="300"></video>
         <p>보름이 꼬시기 2</p>
-    </div>
+      </div>
       <div class="swiper-slide">
         <img src="./images/2018_18.jpg" />
         <p>달빙 추억</p>
@@ -193,15 +193,31 @@
       <div class="swiper-slide">
         <img src="./images/2019_02.gif" />
         <p>총총총-<br>근데 19년도 사진 왜 이게 끝??</p>
-        <a href="">돌아가기~</a>
+        <a href="https://jeongearth.github.io/since_intro/">돌아가기~</a>
       </div>
     </div>
   </div>
 
   <style>
-    .mySwiper .swiper-slide p{text-align: center;line-height: 1.5;}
-    .mySwiper .swiper-slide a{width: 120px;height: 30px;color: #fff;background: #004265; border-radius: 35px 0 35px 0;display: flex;flex-direction: column;
-    justify-content: center;margin: 0 auto; text-align: center; align-items: center;text-decoration: none;}
+    .mySwiper .swiper-slide p {
+      text-align: center;
+      line-height: 1.5;
+    }
+
+    .mySwiper .swiper-slide a {
+      width: 120px;
+      height: 30px;
+      color: #fff;
+      background: #004265;
+      border-radius: 35px 0 35px 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+      text-align: center;
+      align-items: center;
+      text-decoration: none;
+    }
   </style>
 
   <!-- Swiper JS -->
